--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,7 @@
 <h1>Home</h1>
+<form method="get" action="/create">
+    <button type="submit" class="btn btn-warning">Create</button>
+</form>
+{{!-- <form method="get" action="/update">
+    <button type="submit" class="btn btn-danger">Update</button>
+</form> --}}
